@@ -988,6 +988,22 @@
                     <width>88</width>
                     <aspectratio align="right">keep</aspectratio>
                     <centertop>50%</centertop>
+                    <height>48</height>
+                    <texture colordiffuse="$PARAM[colordiffuse]">flags/$PARAM[directory]/audio/atmos.png</texture>
+                    <visible>String.Contains($PARAM[container]$PARAM[source]FileNameAndPath,atmos)</visible>
+                </control>
+                <control type="image">
+                    <width>88</width>
+                    <aspectratio align="right">keep</aspectratio>
+                    <centertop>50%</centertop>
+                    <height>48</height>
+                    <texture colordiffuse="$PARAM[colordiffuse]">flags/$PARAM[directory]/audio/dtsx.png</texture>
+                    <visible>String.Contains($PARAM[container]$PARAM[source]FileNameAndPath,dtsx) | String.Contains($PARAM[container]$PARAM[source]FileNameAndPath,dts-x) | String.Contains($PARAM[container]$PARAM[source]FileNameAndPath,dts:x) | String.Contains($PARAM[container]$PARAM[source]FileNameAndPath,dts x)</visible>
+                </control>
+                <control type="image">
+                    <width>88</width>
+                    <aspectratio align="right">keep</aspectratio>
+                    <centertop>50%</centertop>
                     <height>64</height>
                     <texture colordiffuse="$PARAM[colordiffuse]">flags/$PARAM[directory]/other/bluray.png</texture>
                     <visible>[String.Contains($PARAM[container]$PARAM[source]FileNameAndPath,blu-ray) | String.Contains($PARAM[container]$PARAM[source]FileNameAndPath,bluray) | String.Contains($PARAM[container]$PARAM[source]FileNameAndPath,bdrip) | String.Contains($PARAM[container]$PARAM[source]FileNameAndPath,bd25) | String.Contains($PARAM[container]$PARAM[source]FileNameAndPath,bd50)]</visible>
