@@ -1,3 +1,6 @@
+[B]0.9.31[/B]
+Add support for Atmos and DTS-X flags based on filename
+
 [B]0.9.30[/B]
 WIDGETS - Fix for square widgets
 SKINSETTINGS - Add options to disable info dialog lists
